change a little format and color

--- a/example.html
+++ b/example.html
@@ -2,7 +2,8 @@
 <HEAD>
 <TITLE>Стих дня</TITLE>
 </HEAD>
-<BODY>
-<H1>Узник</H1>
+<BODY bgcolor=#FFFFF0 text=#000000 link=#FF0000>
+<HR SIZE=1 WIDTH=100%><BR>
+<H1 ALIGN=CENTER><TT>Узник</TT></H1>
 </BODY>
 </HTML>
