add additional material

--- a/example.html
+++ b/example.html
@@ -20,5 +20,7 @@
 Туда, где синеют морские края,
 Туда, где гуляем лишь ветер... да я!
 <H4>А. С. Пушкин</H4>
+<A HREF="https://ru.wikipedia.org/wiki/Пушкин,_Александр_Сергеевич"><IMG SRC="https://upload.wikimedia.org/wikipedia/commons/5/56/Portrait_of_Alexander_Pushkin_%28Orest_Kiprensky%2C_1827%29.PNG" WIDTH="140" HEIGHT="164" ALT="А. С. Пушкин">
+</A></P>
 </BODY>
 </HTML>
